[gd_scene load_steps=2 format=3 uid="uid://b6ksv61spl61s"]

[ext_resource type="Script" uid="uid://uoxrd5qkptud" path="res://ui/start/submenu/load/load_menu.gd" id="1_c5kl3"]

[node name="LoadMenu" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_c5kl3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ProfileList" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ShowAutosaves" type="CheckButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DeleteProfile" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "x"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="SaveList" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
